Adding repo_url for edit on github links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: DrupalCorn Guide
 theme: readthedocs
+repo_url: https://github.com/drupalcorn/guide
 nav:
   - About:
     - About this Guide: 'index.md'
