creating files for sections

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,31 +4,31 @@ repo_url: https://github.com/drupalcorn/guide
 nav:
   - About:
     - About this Guide: 'index.md'
-    - Structure: 'structure/index.md'
+    - Structure: 'structure.md'
     - History: 'history.md'
   - Identity and Branding: 'identity/identity.md'
   - Camp Planning:
-    - Timeline: '#'
-    - Meetings: '#'
-    - Venue: '#'
-    - Website: '#'
-    - Sponsors: '#'
-    - Hotels: '#'
-    - Marketing: '#'
-    - Session Selection: '#'
-    - Volunteers: 'volunteers.md'
-    - Video Capture: '#'
-    - Registration: '#'
-    - Catering: '#'
-    - Friends of DrupalCorn Dinner: '#'
-    - Party: '#'
-    - Training Day: '#'
-    - Session Days: '#'
-    - Sprint / Contribution Day: '#'
-    - Post-Camp Analysis: '#'
+    - Timeline: 'camp-planning/timeline.md'
+    - Meetings: 'camp-planning/meetings.md'
+    - Venue: 'camp-planning/venue.md'
+    - Website: 'camp-planning/website.md'
+    - Sponsors: 'camp-planning/sponsors.md'
+    - Lodging: 'camp-planning/lodging.md'
+    - Marketing: 'camp-planning/marketing.md'
+    - Sessions: 'camp-planning/sessions.md'
+    - Volunteers: 'camp-planning/volunteers.md'
+    - Video Capture: 'camp-planning/video.md'
+    - Registration: 'camp-planning/registration.md'
+    - Catering: 'camp-planning/catering.md'
+    - Friends of DrupalCorn Dinner: 'camp-planning/friends_dinner.md'
+    - Party: 'camp-planning/party.md'
+    - Training Day: 'camp-planning/training_day.md'
+    - Session Days: 'camp-planning/session_days.md'
+    - Sprint / Contribution Day: 'camp-planning/contrib_day.md'
+    - Post-Camp Analysis: 'camp-planning/post_camp.md'
   - Code of Conduct:
     - Code of Conduct: 'code-of-conduct.md'
-    - Managing Complaints: '#'
+    - Managing Complaints: 'complaints.md'
 markdown_extensions:
     - toc:
         permalink: "#"
