--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-sudo: false
 language: python
 install:
 - pip install mkdocs
-script
+script:
 - git clean -f -d -x
 after_success:
 - git remote add build "https://${GH_TOKEN}@github.com/drupalcorn/guide.git";
