--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
+sudo: false
 language: python
+python: 3.5
 install:
 - pip install mkdocs
 script:
 - git clean -f -d -x
 after_success:
-- git remote add build "https://${GH_TOKEN}@github.com/drupalcorn/guide.git";
-- git fetch build && git fetch all
-- mkdocs gh-deploy -v --clean --remote-name build;
+- gh_deply.sh
