Start on venue and dates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
   - Camp Planning:
     - Timeline: 'camp-planning/timeline.md'
     - Meetings: 'camp-planning/meetings.md'
-    - Venue: 'camp-planning/venue.md'
+    - Venue and Dates: 'camp-planning/venue_dates.md'
     - Website: 'camp-planning/website.md'
     - Sponsors: 'camp-planning/sponsors.md'
     - Lodging: 'camp-planning/lodging.md'
