--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,9 @@ nav:
     - Timeline: 'camp-planning/timeline.md'
     - Meetings: 'camp-planning/meetings.md'
     - Venue and Dates: 'camp-planning/venue_dates.md'
-    - Website: 'camp-planning/website.md'
+    - Website: 
+      - Content: 'camp-planning/website_content.md'
+      - Hosting: 'camp-planning/website.md'
     - Sponsors: 'camp-planning/sponsors.md'
     - Lodging: 'camp-planning/lodging.md'
     - Marketing: 'camp-planning/marketing.md'
