mkdocs.yml add budget menu item

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
       - Hosting: 'camp-planning/website.md'
       - Content: 'camp-planning/website_content.md'
     - Sponsors: 'camp-planning/sponsors.md'
+    - Budgeting: 'camp-planning/budget.md'
     - Lodging: 'camp-planning/lodging.md'
     - Marketing: 'camp-planning/marketing.md'
     - Sessions: 'camp-planning/sessions.md'
